--- a/stylefloatprofile.css
+++ b/stylefloatprofile.css
@@ -6,7 +6,7 @@
   float: left;
   width: 50%;
   height: 600px; /* only for demonstration, should be removed */
-  background: rgb(122, 122, 122);
+  background: rgb(190, 193, 196);
   padding: 20px;
   }
 
@@ -14,7 +14,7 @@
   float: left;
   padding: 20px;
   width: 50%;
-  background-color: rgb(80, 122, 145);
+  background-color: rgb(103, 104, 107);
   height: 300px; /* only for demonstration, should be removed */
 
   }
@@ -23,7 +23,47 @@
   float: right;
   padding: 20px;
   width: 50%;
-  background-color: rgb(90, 21, 143);
+  background-color: rgb(31, 32, 33);
   height: 300px; /* only for demonstration, should be removed */
 
+  }
+
+  .flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+  }
+  
+  .flip-card-inner {
+    /* position: relative; */
+    /* width: 100%;
+    height: 100%; */
+    /* keeping above width and height in will show a "card" */
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    
+    color: black;
+  }
+  
+  .flip-card-back {
+    
+    color: white;
+    transform: rotateY(180deg);
   }
