--- a/stylefloatprofile.css
+++ b/stylefloatprofile.css
@@ -67,9 +67,9 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.6s;
+    transition: transform 0.5s;
     transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
     
   }
   
@@ -86,7 +86,7 @@
   
   .flip-card-front {
     /* background-color: #bbb; */
-    font-size: 50px;
+    font-size: 30px;
     color: black;
     padding-top: 50px;
   }
@@ -95,14 +95,86 @@
     /* background-color: #2980b9; */
     text-decoration: none;
     color: white;
-    font-size: 50px;
+    
     transform: rotateY(180deg);
-    padding-top: 50px;
+    
   }
 
-  .flip-card-back a:link {
+  .flip-card-back a:link, a:visited {
     text-decoration: none;
-    color: white;
-    font-size: 50px;
+    color: white;    
+  }
+
+
+  .title {
+    font-size: 30px;
+  }
+
+  .highlight {
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    
+  }
+
+  .highlight:hover {
+    border-radius: 8px;
+    border: 2px solid rgba(172, 118, 241, 0.459);
+    
+  }
+
+  .subtitle {
+    font-size: 15px;
+  }
+
+  .title img {
+    padding-top:10px;
+  }
+
+  .button {
+    border-radius: 4px;
+    
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 20px;
+    transition: all 0.5s;
+  }
+
+  .button a {
+    position: relative;
+  transition: 0.5s;
+
+  }
+
+  .button a:after {
+    content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+  }
+
+  .button:hover a {
+    padding-right: 25px;
+  }
+  
+  .button:hover a:after {
+    opacity: 1;
+    right: 0;
+  }
+
+
+
+  #designblog {
+    padding: 10px;
+  }
+
+  #examples {
+    padding: 100px;
+  }
+
+  #summary {
+    padding: 50px;
   }
 
